# lingmo-appearance

./: CMakeLists.txt  README.md
.github/workflows/: package.yml
debian/: changelog  control  copyright  liblingmoappearance-dev.install  liblingmoappearance1.install
include/lingmo-appearance/: export.h  lingmoaccentcolor.h  lingmocolor.h  lingmotheme.h
rpm/: lingmo-appearance.spec
src/: CMakeLists.txt  lingmoaccentcolor.cpp  lingmocolor.cpp  lingmotheme.cpp  qqmlsortfilterproxymodel.cpp  qqmlsortfilterproxymodel.h  thememanager.cpp
tests/: CMakeLists.txt  test_lingmotheme.cpp
